[package]
name = "trinci-sign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#RESTORE BEFORE MERGE IN MASTER trinci-core = { git = "https://github.com/affidaty-blockchain/trinci-core", default-features = false }
trinci-core = { git = "https://ignore:icnAD-JTWci6TqfroMP7@gitlab.affidaty.net/developer2/trinci-github/trinci-core.git", branch = "develop", default-features = false }

clap = { version = "3.1.0", features = ["cargo"] }
hex = "0.4.0"
bs58 = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.5"
serde-value = { git = "https://github.com/affidaty-blockchain/serde-value", branch = "helper_macro" }
rmp-serde = "1.0.0"
serde_json = "1.0.79"
