[package]
name = "trinci-sign"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trinci-core = { git = "https://github.com/affidaty-blockchain/trinci-core", default-features = false }

clap = { version = "3.1.8", features = ["cargo"] }
hex = "0.4.3"
bs58 = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.5"
serde-value = { git = "https://github.com/affidaty-blockchain/serde-value", branch = "helper_macro" }
rmp-serde = "1.0.0"
serde_json = "1.0.79"
ureq = { version = "2.4.0", default-features = false }
rand = "0.8.5"
