[package]
name = "trinci-sign"
version = "0.1.2"
edition = "2021"

[lib]
crate-type = ["dylib"]

[profile.release]
opt-level = 'z'   # Optimize for size.
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Reduce number of codegen units to increase optimizations.
panic = 'abort'   # Abort on panic
strip = true      # Strip symbols from binary*

[dependencies]
trinci-core = { git = "https://github.com/affidaty-blockchain/trinci-core", default-features = false }

hex = "0.4.3"
bs58 = "0.4.0"
serde = { version = "1.0.136", features = ["derive"] }
serde_bytes = "0.11.5"
serde-value = { git = "https://github.com/affidaty-blockchain/serde-value", branch = "helper_macro" }
rmp-serde = "1.0.0"
serde_json = "1.0.79"
ureq = { version = "2.4.0" }
rand = "0.8.5"
